# spell-checker:ignore apidoc programoutput sphinxcontrib
[metadata]
name = ansible-lint
url = https://github.com/ansible-community/ansible-lint
project_urls =
  Bug Tracker = https://github.com/ansible-community/ansible-lint/issues
  Release Management = https://github.com/ansible-community/ansible-lint/releases
  CI: GitHub = https://github.com/ansible-community/ansible-lint/actions?query=workflow:tox+branch:main+event:push
  Code of Conduct = https://docs.ansible.com/ansible/latest/community/code_of_conduct.html
  Documentation = https://ansible-lint.readthedocs.io/en/latest/
  Mailing lists = https://docs.ansible.com/ansible/latest/community/communication.html#asking-questions-over-email
  Source Code = https://github.com/ansible-community/ansible-lint
description = Checks playbooks for practices and behavior that could potentially be improved
long_description = file: README.md
long_description_content_type = text/markdown
author = Will Thames
author_email = will@thames.id.au
maintainer = Ansible by Red Hat
maintainer_email = info@ansible.com
license = GPLv3
license_files =
  COPYING
  docs/licenses/LICENSE*.*
classifiers =
  Development Status :: 5 - Production/Stable

  Environment :: Console

  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators

  Operating System :: OS Independent

  License :: OSI Approved :: GNU General Public License v3 (GPLv3)

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: Jython
  Programming Language :: Python :: Implementation :: PyPy

  Topic :: Software Development :: Bug Tracking
  Topic :: Software Development :: Quality Assurance
  Topic :: Software Development :: Testing

  Topic :: Utilities
keywords =
  ansible
  lint

[options]
use_scm_version = True
python_requires = >=3.8
package_dir =
  = src
packages = find:
zip_safe = False

# These are required in actual runtime:
install_requires =
  ansible-compat>=2.0.4  # GPLv3
  ansible-core>=2.12.0  # GPLv3
  enrich>=1.2.6
  jsonschema>=4.5.1  # MIT, first version to have ordered keys in output
  packaging
  pyyaml
  pytest
  rich>=9.5.1
  # The next version is planned to have breaking changes
  ruamel.yaml >= 0.15.34, < 0.18
  # NOTE: per issue #509 0.15.34 included in debian backports
  wcmatch>=7.0  # MIT
  yamllint >= 1.25.0  # GPLv3

[options.entry_points]
console_scripts =
  ansible-lint = ansiblelint.__main__:_run_cli_entrypoint

[options.extras_require]
docs =
  myst-parser >= 0.16.1
  pipdeptree >= 2.2.1
  sphinx >= 4.4.0
  sphinx-ansible-theme >= 0.9.1
  sphinx-rtd-theme >= 0.5.2, < 1.0.0   # 1.0.0 broke rendering
  sphinxcontrib-apidoc >= 0.3.0
  sphinxcontrib-programoutput2 >= 2.0a1
  yamllint >= 1.26.3
test =
  coverage >= 6.3
  tomli >= 2.0.0
  flaky >= 3.7.0
  pytest >= 6.0.1
  pytest-cov >= 2.10.1
  pytest-plus >= 0.2 # for PYTEST_REQPASS
  pytest-xdist >= 2.1.0
  psutil  # soft-dep of pytest-xdist
  black  # IDE support
  mypy  # IDE support
  pylint   # IDE support
  flake8  # IDE support

[options.packages.find]
where = src

[options.package_data]
* = py.typed, **/*.json, **/*.md

[codespell]
skip = .tox,.mypy_cache,build,.git,.eggs,pip-wheel-metadata
# indention is a typo in ruamel.yaml's API
ignore-words-list = indention
