# spell-checker:ignore apidoc programoutput sphinxcontrib
[metadata]
name = ansible-lint
url = https://github.com/ansible/ansible-lint
project_urls =
  Bug Tracker = https://github.com/ansible/ansible-lint/issues
  Release Management = https://github.com/ansible/ansible-lint/releases
  CI: GitHub = https://github.com/ansible/ansible-lint/actions?query=workflow:tox+branch:main+event:push
  Code of Conduct = https://docs.ansible.com/ansible/latest/community/code_of_conduct.html
  Documentation = https://ansible-lint.readthedocs.io/
  Mailing lists = https://docs.ansible.com/ansible/latest/community/communication.html#asking-questions-over-email
  Source Code = https://github.com/ansible/ansible-lint
description = Checks playbooks for practices and behavior that could potentially be improved
long_description = file: README.md
long_description_content_type = text/markdown
author = Will Thames
author_email = will@thames.id.au
maintainer = Ansible by Red Hat
maintainer_email = info@ansible.com
license = GPLv3+
license_files =
  COPYING
  docs/licenses/LICENSE*.*
# https://pypi.org/classifiers/
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  Operating System :: MacOS
  Operating System :: POSIX
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Natural Language :: English
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3 :: Only
  Topic :: Software Development :: Quality Assurance
  Topic :: Software Development :: Testing
  Topic :: Utilities
keywords =
  ansible
  lint

[options]
use_scm_version = True
python_requires = >=3.8
package_dir =
  = src
packages = find:
# Do not use include_package_data as we mention them explicitly.
# see https://setuptools.pypa.io/en/latest/userguide/datafiles.html
# include_package_data = True
zip_safe = False

# These are required in actual runtime. Extra conditions were added in order
# to help pip find dependencies, especially on older systems, where it might
# end-up downloading a huge amount of wheels in its attempt to find one that
# is compatible.
install_requires =
  # Special order section for helping pip:
  will-not-work-on-windows-try-from-wsl-instead; platform_system=="Windows"
  ansible-core>=2.12.0,<2.14.0; python_version<"3.9"  # GPLv3
  ansible-core>=2.12.0; python_version>="3.9"  # GPLv3
  ansible-compat>=2.2.7  # GPLv3
  # alphabetically sorted:
  black>=22.8.0  # MIT
  filelock>=3.3.0  # The Unlicense
  jsonschema>=4.10.0  # MIT, version needed for improved errors
  packaging>=21.3  # Apache-2.0,BSD-2-Clause
  pyyaml>=5.4.1  # MIT (centos 9 has 5.3.1)
  rich>=12.0.0  # MIT
  ruamel.yaml >= 0.17.21, < 0.18  # MIT, next version is planned to have breaking changes
  yamllint >= 1.26.3  # GPLv3
  wcmatch>=8.1.2  # MIT

[options.entry_points]
console_scripts =
  ansible-lint = ansiblelint.__main__:_run_cli_entrypoint

[options.extras_require]
docs =
  myst-parser >= 0.16.1
  pipdeptree >= 2.2.1
  sphinx >= 4.4.0
  sphinx-ansible-theme >= 0.9.1
  sphinx-rtd-theme >= 1.0.0, < 2.0.0   # 1.0.0 broke rendering
  sphinxcontrib-apidoc >= 0.3.0
  sphinxcontrib-programoutput2 >= 2.0a1
test =
  coverage-enable-subprocess # see https://github.com/nedbat/coveragepy/issues/1341#issuecomment-1228942657
  coverage[toml] >= 6.4.4
  pytest >= 7.2.0
  pytest-mock
  pytest-plus >= 0.2 # for PYTEST_REQPASS
  pytest-xdist >= 2.1.0
  psutil  # soft-dep of pytest-xdist
  black  # IDE support
  mypy  # IDE support
  pylint   # IDE support
  flake8  # IDE support
  flake8-future-annotations  # IDE support


[options.packages.find]
where = src

[options.package_data]
* =
  py.typed
  **/*.json
  **/*.yml
  **/*.yaml
  **/*.md

[codespell]
skip = .tox,.mypy_cache,build,.git,.eggs,pip-wheel-metadata
# indention is a typo in ruamel.yaml's API
ignore-words-list = indention
